--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="dist/style.min.css">
 </head>
 <body>
-    <div class="main"></div>
+    <div id="flashcards-container"></div>
     <script src="dist/main.min.js"></script>
 </body>
 </html>
