update with working css for cards with smooth transition

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard Study App</title>
-    <link rel="stylesheet" href="dist/style.min.css">
+    <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
-    <div id="flashcards-container"></div>
-    <script src="dist/main.min.js"></script>
+    <div id="flashcards__container">
+        <!-- <div class="flashcards__card">
+            <div class="flashcards__card--question">what is A</div>
+            <div class="flashcards__card--answer">a is a letter</div>
+          </div> -->
+    </div>
+    
+    <script src="dist/js/main.min.js"></script>
 </body>
 </html>
