--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard Study App</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
+    <nav class="navbar">Flash Card Study App <img src="dist/img/study.svg" alt="Study Icon"></nav>
     <div id="flashcards__container">
         <!-- <div class="flashcards__card">
             <div class="flashcards__card--question">what is A</div>
