update with readme and minor notes. Also update with style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
             <div class="flashcards__card--answer">a is a letter</div>
           </div> -->
     </div>
-    
+    <div class="footer">
+        <div class="footer__container">
+            <div class="footer__container--column">
+                <h3>Mozilla MDN</h3>
+                <ul>
+                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
