update with comment on html page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <nav class="navbar">Flash Card Study App <img src="dist/img/study.svg" alt="Study Icon"></nav>
     <div id="flashcards__container">
-        <!-- <div class="flashcards__card">
+        <!-- 
+        <div class="flashcards__card">
             <div class="flashcards__card--question">what is A</div>
             <div class="flashcards__card--answer">a is a letter</div>
-          </div> -->
+        </div> 
+        -->
     </div>
     <div class="footer">
         <div class="footer__container">
